--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,9 @@
       <ul class="list-group">
         <li
           class="list-group-item"
-          (click)="onDelete(item)"
+          (click)="onDelete(i)"
           [@list1]
-          *ngFor="let item of list">
+          *ngFor="let item of list; let i = index">
           {{ item }}
         </li>
       </ul>
@@ -39,8 +39,9 @@
       <ul class="list-group">
         <li
           class="list-group-item"
-          (click)="onDelete(item)"
-          *ngFor="let item of list">
+          (click)="onDelete(i)"
+          [@list2]
+          *ngFor="let item of list; let i = index">
           {{ item }}
         </li>
       </ul>
